# requirements-check

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
docs/: cli.md  conf.py  index.md  library.md  requirements.txt
examples/: requirements.in  requirements.txt  sample-report.html  sample-report.json  sample-report.sarif  sample-sbom.json
requirements_check/: __init__.py  __main__.py  analyzer.py  cli.py  models.py  parser.py  pypi.py  report.py  sarif.py  sbom.py  security.py
tests/: test_analyzer.py  test_cli.py  test_parser.py  test_pypi.py  test_report.py  test_sarif.py  test_sbom.py  test_security.py
